edit后增加刷新页面操作（显示更新数据）

--- a/templates/cmdb/asset_edit.html
+++ b/templates/cmdb/asset_edit.html
@@ -34,10 +34,13 @@
         var success = {{ status }};
         if ( success == '1' ) {
             parent.$("#handle_status").val('1');
-              parent.layer.close(index);
+            parent.layer.close(index);
+            window.parent.location.reload();
+
         } else if( success == '2' ) {
             parent.$("#handle_status").val('2');
             parent.layer.close(index);
+            window.parent.location.reload();
         }
 </script>
 </body>
