--- a/templates/monitor/host_info.html
+++ b/templates/monitor/host_info.html
@@ -9,26 +9,26 @@
     <section class="content" style="position:relative;">
       <div class="box-info">
         <div class="box-header with-border">
-          <h5 class="box-title">{{ hostname }}</h5>
+          <h5 class="box-title">{{ ip }}</h5>
         </div>
         <div class="box-body">
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 0 %}"><span class="btn btn-default .btn-flat">一小时</span></a>
+             <a href="{% url 'host_info' ip 0 %}"><span class="btn btn-default .btn-flat">一小时</span></a>
         </div>
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 1 %}"><span class="btn btn-default .btn-flat">三小时</span></a>
+             <a href="{% url 'host_info' ip 1 %}"><span class="btn btn-default .btn-flat">三小时</span></a>
         </div>
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 2 %}"><span class="btn btn-default .btn-flat">五小时</span></a>
+             <a href="{% url 'host_info' ip 2 %}"><span class="btn btn-default .btn-flat">五小时</span></a>
         </div>
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 3 %}"><span class="btn btn-default .btn-flat">一天</span></a>
+             <a href="{% url 'host_info' ip 3 %}"><span class="btn btn-default .btn-flat">一天</span></a>
         </div>
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 4 %}"><span class="btn btn-default .btn-flat">三天</span></a>
+             <a href="{% url 'host_info' ip 4 %}"><span class="btn btn-default .btn-flat">三天</span></a>
         </div>
         <div class="btn-group btn-group-lg">
-             <a href="{% url 'host_info' hostname 5 %}"><span class="btn btn-default .btn-flat">一周</span></a>
+             <a href="{% url 'host_info' ip 5 %}"><span class="btn btn-default .btn-flat">一周</span></a>
         </div>
     <div id="cpu" style="width: 600px;height:220px;"></div>
     <div id="memory" style="width: 600px;height:220px;"></div>
