--- a/templates/cmdb/server_detail.html
+++ b/templates/cmdb/server_detail.html
@@ -37,7 +37,7 @@
                                 </tr>
                                 <tr class="even gradeX">
                                     <td>CPU逻辑核心</td>
-                                    <td>{{ host.cpu_num }}</td>
+                                    <td>{{ host.cpu_num }}核</td>
                                 </tr>
                                 <tr class="even gradeX">
                                     <td>内存信息</td>
