--- a/templates/cmdb/index.html
+++ b/templates/cmdb/index.html
@@ -136,8 +136,8 @@
                 </div>
 
                 <!-- /.box-header -->
-            <div class="col-md-5">
-            </div>
+{#            <div class="col-md-5">#}
+{#            </div>#}
                 <div class="box-body">
                     <div class="btn-group">
                         <a id="assetdel" class="btn btn-danger" style="display: none"  name="del_button">
